[tool.poetry]
name = "module-api"
version = "0.1.0"
description = "Parse and extract a module's API"
authors = ["Andrew Ross <andrew.ross.mail@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
pylint = "^2.13.5"
reorder-python-imports = "^3.0.1"
bump2version = "^1.0.1"
pre-commit = "^2.18.1"
pytest = "^7.1.1"

[tool.poetry.scripts]
module-api = 'module_api:cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
